Refactor and checkstyle